# Symbolic-Weak-form-Recovery-of-2-D-Stochastic-Generators

./: .gitignore  LICENSE  README.md  pyproject.toml  reproduce.sh  requirements.txt
configs/: _schema.yaml
data/baselines/: act1_naive1d_failure.csv  act2_graft_ladder.csv  act2_graft_ladder_cells.csv  b0_equivalence.csv  cell_diagnosis.csv  convergence.csv  data_integrity_report.csv  external_1d_provenance.csv  freeze_confirm.csv  freeze_confirm_cells.csv  headtohead.csv  headtohead_cells.csv  honest_nulls.csv  necessity_matrix.csv  necessity_matrix_cells.csv  readouts_circulation.csv  readouts_fluctuation.csv  readouts_leverage.csv  run_log.csv  system_index.csv  v6_2_extra_coefficients.csv  v6_2_extra_coefficients_raw.csv  v6_2_extra_summary.csv  v6_2_extra_summary_raw.csv  v6_2_run_log.csv
experiments/: __init__.py  build_paper.py  coefficient_recovery.py  common.py  datasheet_figures.py  gen_datasheets.py
paper/: COMPILE_STATUS.md  V8_WRITING_STATUS.md  arxiv.sty  coeff_comparison_table.tex  datasheets.tex  ds_bistable.tex  ds_financial.tex  ds_limitcycle.tex  ds_limits.tex  ds_linear.tex  ds_multiplicative.tex  ds_rotational.tex  main.tex  references.bib  table_master.tex
src/sde2d/: __init__.py  (+13 more)
tests/: conftest.py  test_core.py  test_figstyle.py  test_invariants.py  test_multi_lag.py  test_regression.py  test_v11_package.py  test_v15_grafts.py  test_v16_grafts.py  test_v17_grafts.py  test_v2_acceptance.py  test_v5_5_scope.py  test_v5_mechanisms.py  test_v6_2_audit.py  test_v7_package.py  test_v8_2_figfix_integrity.py  test_v9_paper.py  test_wg_sindy.py
(+65 files in other folders)
