[project]
name = "sde2d"
version = "0.1.0"
description = "2D weak-form stochastic generator recovery with fluctuation, leverage, and circulation readouts"
requires-python = ">=3.11,<3.12"
dependencies = [
  "numpy==1.26.4",
  "scipy==1.13.1",
  "scikit-learn==1.5.1",
  "pandas==2.2.2",
  "matplotlib==3.9.1",
  "pytest==8.3.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "quick: quick smoke tests",
  "smoke: smoke acceptance tests",
]
